# sparse-einsum

./: .flake8  .gitignore  .pylintrc  README.md  bench.py  benchmark.py  mypy.ini  pyproject.toml  test.py
notes/: s-d-element-wise-graph-breaks.txt
speinsum/: __init__.py  compiler.py  indirecteinsum.py  sparse_tensor.py  typing.py
tests/: test_compiler.py
