[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speinsum"
version = "0.1.0"
description = "A compiler for sparse einsum operations on PyTorch tensors"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["pytorch", "einsum", "sparse", "compiler"]
authors = [
    { name = "Joel Manu", email = "" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 